# src/main/resources/api/order_openapi.yml
@@ -58,7 +58,29 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Cart'
-  /carts/add_product/{user_id}:
+  /carts/by-user/{user_id}:
+    get:
+      summary: Get the cart for a specific user
+      description: Retrieve the cart associated with the specified user ID. If no cart exists, returns a `204 No Content` status.
+      tags:
+        - Cart
+      operationId: getCartsByUser
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The cart associated with the user.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cart'
+        '204':
+          description: No cart found for the specified user.
+  /carts/add-product/{user_id}:
     post:
       summary: Add product to cart
       tags:
@@ -126,8 +148,81 @@ paths:
                     type: string
                     format: date-time
                     example: "YYYY-MM-DDThh:mm:ss.SSS"
-
-
+  /orders:
+    get:
+      summary: Get all orders
+      tags:
+        - Order
+      operationId: getOrders
+      responses:
+        '200':
+          description: A list of orders
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Order'
+    post:
+      summary: Create a new order
+      tags:
+        - Order
+      operationId: placeOrder
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Cart'
+      responses:
+        '201':
+          description: Order created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        '400':
+          description: Cart must not be null and must have an ID.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: User ID and Product must not be null.
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "YYYY-MM-DDThh:mm:ss.SSS"
+        '404':
+          description: Product is currently out of stock.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Your cart contains a product (id = {id}) that is currently out of stock.
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "YYYY-MM-DDThh:mm:ss.SSS"
+        '500':
+          description: Failed to save the order.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Failed to save the order.
+                  timestamp:
+                    type: string
+                    format: date-time
+                    example: "YYYY-MM-DDThh:mm:ss.SSS"
 components:
   schemas:
     Product:
@@ -165,4 +260,36 @@ components:
         product:
           $ref: '#/components/schemas/Product'
         productQuantity:
+          type: integer
+          format: int64
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        userId:
+          type: string
+        createdDate:
+          type: string
+          format: date-time
+        orderedProducts:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderedProduct'
+    OrderedProduct:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        originalProductId:
+          type: integer
+          format: int64
+        productName:
+          type: string
+        productPrice:
+          type: number
+          format: double
+        quantity:
           type: integer
